--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "cy:verify": "cypress verify",
+    "ci:start-ng": "angular-http-server --path ./dist/YOUR_APP_NAME -p 4200",
+    "ci:cy-run": "start-server-and-test ci:start-ng http://localhost:4200 cy:run"
   },
   "author": "",
   "license": "ISC",
