--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
+    "runcy": "node_module\\.bin\\cypress run",
     "cy:run": "cypress run",
     "cy:verify": "cypress verify",
     "ci:start-ng": "angular-http-server --path ./dist/YOUR_APP_NAME -p 4200",
