--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "runcy": "node_module\\.bin\\cypress run",
-    "cy:run": "cypress run",
+    "cy:run": "node_module\\.bin\\cypress run",
     "cy:verify": "cypress verify",
     "ci:start-ng": "angular-http-server --path ./dist/YOUR_APP_NAME -p 4200",
     "ci:cy-run": "start-server-and-test ci:start-ng http://localhost:4200 cy:run"
